--- a/public/templates/view.html
+++ b/public/templates/view.html
@@ -13,10 +13,12 @@
     <input  type="text" ng-model="comment_msg"/>
     <input type="submit" />
   </form>
-  <div ng-repeat="comment in question.comments">
+  <div ng-repeat="comment in question.comments track by $index">
 
     <hr />
     <h4>{{comment.name}}</h4>
-    <h4>{{comment.vote}}</h4>
+    <h4 ng-click="upVoteComment($index)">{{comment.vote}}</h4>
     <h4>{{comment.msg}}</h4>
+    <h4>{{comment._id}}</h4>
+    <h4>{{comment.index}}</h4>
   </div>
