--- a/public/templates/view.html
+++ b/public/templates/view.html
@@ -13,6 +13,22 @@
     <input  type="text" ng-model="comment_msg"/>
     <input type="submit" />
   </form>
+  <div>
+    <h1>Correct Answer</h1>
+    <div ng-repeat="comment in question.comments | filter:{correct_answer:true}">
+      <h4>{{comment.name}}</h4>
+
+      <h4>{{comment.msg}}</h4>
+
+      <br />
+      <br />
+
+    </div>
+    <h1>end of correct_answer</h1>
+  </div>
+
+
+
   <div ng-repeat="comment in question.comments track by $index " ng-class="comment.correct_answer ? 'correct_answer_true' : 'correct_answer_default'">
 
 
