--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,18 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
+
+
+
+
+
+body {
+  background-color: #edf0f5;
+  font-family: 'Roboto', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #4db2eb;
+}
 .correct_answer{
   background-color: #00FF00;
   padding: 20px;
@@ -9,4 +24,62 @@
 }
 .correct_answer_default {
 
+}
+
+.search_box {
+  padding: 100px;
+  margin-left: auto;
+  margin-left: auto;
+}
+#search{
+width: 100%;
+height: 50px;
+font-size: 24px;
+padding: 20px;
+border-radius: 5px;
+border:none;
+}
+
+
+.question_box {
+    background-color: #FFFFFF;
+    padding: 10px 0px 0px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+.question_box_header {
+  width: 100%;
+  padding: 0px 0px 0px 20px;
+
+}
+.question_box_msg {
+  width: 100%;
+  padding: 0px 0px 0px 20px;
+
+}
+
+.question_box_footer {
+  width: 100%;
+  padding: 0px 0px 0px 20px;
+
+}
+.question_box_white {
+  background-color: #FFFFFF;
+  display: block;
+  width: 100%;
+  padding: 0px
+}
+.bottom_question_tags {
+  width: 100%;
+  background-color: #000000;
+  /* margin-left: 30px; */
+  /* margin-right: 40px; */
+  height: 40px;
+  line-height: 40px;
+  color: #a4a4a4;
+}
+
+.bottom_question_tags > span {
+  display: block;
+  padding-left: 10px;
 }
