--- a/public/templates/directory.html
+++ b/public/templates/directory.html
@@ -15,7 +15,8 @@
 
   <div class="bottom_question_tags">
     <div class="question_box_footer">
-        {{question.tags}}
+      Tags <i class="fa fa-tags space_icon" aria-hidden="true"></i> <span class="question_box_footer_tags">{{question.tags}}</span>
+       <span class="question_box_footer_answers">Comments<i class="fa fa-comment-o space_icon" aria-hidden="true"></i> {{question.comments.length}}</span>
     </div>
   </div>
 
