--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -69,6 +69,11 @@ padding-left: 10px;
 .question_box_footer_answers {
 float: right;
 }
+
+.question_box_footer_answers_correct {
+  float: right;
+      margin-right: 30px;
+}
 .space_icon {
   padding-left: 5px;
   padding-right: 5px;
