--- a/public/templates/directory.html
+++ b/public/templates/directory.html
@@ -2,6 +2,7 @@
  <div class="search_box">
    <input ng-model="query" id="search" placeholder="Skriv in en fråga">
  </div>
+
 <div class="question_box" ng-repeat="question in questions | filter:query">
   <div class="question_box_header">
     <a ng-href="/#/question/{{question._id}}">
@@ -11,12 +12,20 @@
   <div class="question_box_msg">
     <h2>{{question.question_msg}}</h2>
     <h4>{{question.author_user}}</h4>
+
   </div>
 
   <div class="bottom_question_tags">
     <div class="question_box_footer">
       Tags <i class="fa fa-tags space_icon" aria-hidden="true"></i> <span class="question_box_footer_tags">{{question.tags}}</span>
        <span class="question_box_footer_answers">Comments<i class="fa fa-comment-o space_icon" aria-hidden="true"></i> {{question.comments.length}}</span>
+
+
+         <span class="question_box_footer_answers_correct" ng-repeat="comment in question.comments  | filter:{correct_answer:true} as result " ng-show="$first">Correct answer(s)<i class="fa fa-check space_icon" aria-hidden="true"></i> {{result.length}}
+
+         </span>
+
+
     </div>
   </div>
 
