--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -98,3 +98,56 @@ float: right;
   display: block;
   padding-left: 10px;
 }
+
+
+#comment_name{
+
+  height: 50px;
+      font-size: 14px;
+      padding: 0px 144px 0px 10px;
+      /* border-radius: 5px; */
+      border-bottom: 1px solid #538fbe;
+      border-top: none;
+      border-left: none;
+      border-right: none;
+      margin-bottom: 20px;
+}
+#comment_msg{
+  height: 100px;
+      font-size: 14px;
+      padding: 0px 0px 0px 10px;
+      /* border-radius: 5px; */
+      border-bottom: 1px solid #538fbe;
+      border-top: none;
+      border-left: none;
+      border-right: none;
+      margin-bottom: 20px;
+}
+
+.answer_button {
+  display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    background-color: #538fbe;
+    padding: 14px 70px;
+    font-size: 17px;
+    border: 1px solid #2d6898;
+}
+
+.corrent_answers_top {
+  background-color: #25b459;
+  color: #FFFFFF;
+  padding: 20px;
+  margin-bottom: 20px;
+  width: 90%;
+  border-radius: 5px;
+}
+.default_answers_top {
+  background-color: #a1a1a1;
+  color: #FFFFFF;
+  padding: 20px;
+  margin-bottom: 20px;
+  width: 90%;
+  border-radius: 5px;
+}
