--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -100,7 +100,7 @@ float: right;
 }
 
 
-#comment_name{
+.comment_name{
 
   height: 50px;
       font-size: 14px;
@@ -112,7 +112,7 @@ float: right;
       border-right: none;
       margin-bottom: 20px;
 }
-#comment_msg{
+.comment_msg{
   height: 100px;
       font-size: 14px;
       padding: 0px 0px 0px 10px;
