--- a/public/templates/new.html
+++ b/public/templates/new.html
@@ -1,9 +1,12 @@
-
-
-<form id="questionForm" ng-submit="addNewQuestion()">
-    <input type="text" ng-model="question_headline" placeholder="Question headline"/>
-    <input type="text" ng-model="author_user" placeholder="Author"/>
-    <input type="text" ng-model="question_msg" placeholder="Questions message"/>
-    <input type="text" ng-model="tags" ng-list=", " placeholder="Add your tags"/>
-    <input type="submit" />
-  </form>
+<div class="question_box">
+  <div class="question_box_header">
+    <form id="questionForm" ng-submit="addNewQuestion()">
+        <input type="text" ng-model="question_headline" placeholder="Rubrik" class="comment_name"/><br />
+        <input type="text" ng-model="author_user" placeholder="Ditt namn"  class="comment_name"/><br />
+        <input type="text" ng-model="tags" ng-list=", " placeholder="Dina taggar"  class="comment_name"/><br />
+        <textarea ng-model="question_msg" placeholder="Din fråga" class="comment_msg"  cols="40" rows="10"></textarea><br />
+        <input type="submit" class="answer_button " value="Skicka fråga"/>
+      </form>
+      <br />
+  </div>
+</div>
