--- a/public/templates/directory.html
+++ b/public/templates/directory.html
@@ -17,11 +17,11 @@
 
   <div class="bottom_question_tags">
     <div class="question_box_footer">
-      Tags <i class="fa fa-tags space_icon" aria-hidden="true"></i> <span class="question_box_footer_tags">{{question.tags}}</span>
-       <span class="question_box_footer_answers">Comments<i class="fa fa-comment-o space_icon" aria-hidden="true"></i> {{question.comments.length}}</span>
+      Taggar <i class="fa fa-tags space_icon" aria-hidden="true"></i> <span class="question_box_footer_tags">{{question.tags}}</span>
+       <span class="question_box_footer_answers">Kommentarer<i class="fa fa-comment-o space_icon" aria-hidden="true"></i> {{question.comments.length}}</span>
 
 
-         <span class="question_box_footer_answers_correct" ng-repeat="comment in question.comments  | filter:{correct_answer:true} as result " ng-show="$first">Correct answer(s)<i class="fa fa-check space_icon" aria-hidden="true"></i> {{result.length}}
+         <span class="question_box_footer_answers_correct" ng-repeat="comment in question.comments  | filter:{correct_answer:true} as result " ng-show="$first">Rätt(a) svar<i class="fa fa-check space_icon" aria-hidden="true"></i> {{result.length}}
 
          </span>
 
