--- a/public/templates/directory.html
+++ b/public/templates/directory.html
@@ -1,6 +1,6 @@
 
  <div class="search_box">
-   <input ng-model="query" id="search" placeholder="Skriv in en fråga">
+   <input ng-model="query" id="search" placeholder="Skriv in en fråga till guruSHARK">
  </div>
 
 <div class="question_box" ng-repeat="question in questions | filter:query">
