--- a/public/templates/directory.html
+++ b/public/templates/directory.html
@@ -21,7 +21,7 @@
        <span class="question_box_footer_answers">Kommentarer<i class="fa fa-comment-o space_icon" aria-hidden="true"></i> {{question.comments.length}}</span>
 
 
-         <span class="question_box_footer_answers_correct" ng-repeat="comment in question.comments  | filter:{correct_answer:true} as result " ng-show="$first">Rätt(a) svar<i class="fa fa-check space_icon" aria-hidden="true"></i> {{result.length}}
+         <span class="question_box_footer_answers_correct" ng-repeat="comment in question.comments  | filter:{correct_answer:true} as result " ng-show="$first">Rätt(a) svar<i class="fa fa-check space_icon correct_check" aria-hidden="true"></i> {{result.length}}
 
          </span>
 
