serach function is working

--- a/public/templates/search.html
+++ b/public/templates/search.html
@@ -5,4 +5,9 @@
 search
 </div>
 
-<label>{{list.foo}}</label>
+<div ng-repeat="list in lists">
+  <h1>{{list.question_headline}}</h1>
+  <h1>{{list.author_user}}</h1>
+  <h1>{{list.question_msg}}</h1>
+  <hr />
+</div>
