--- a/public/templates/search.html
+++ b/public/templates/search.html
@@ -5,9 +5,31 @@
 search
 </div>
 
-<div ng-repeat="list in lists">
-  <h1>{{list.question_headline}}</h1>
-  <h1>{{list.author_user}}</h1>
-  <h1>{{list.question_msg}}</h1>
-  <hr />
+<div class="question_box" ng-repeat="question in questions | filter:query ">
+  <div class="question_box_header">
+    <a ng-href="/#/question/{{question._id}}">
+    <h1>{{question.question_headline}}</h1></a>
+  </div>
+
+  <div class="question_box_msg">
+    <h2>{{question.question_msg}}</h2>
+    <h4>{{question.author_user}}</h4>
+
+  </div>
+
+  <div class="bottom_question_tags">
+    <div class="question_box_footer">
+      Taggar <i class="fa fa-tags space_icon" aria-hidden="true"></i> <span class="question_box_footer_tags">{{question.tags}}</span>
+       <span class="question_box_footer_answers">Kommentarer<i class="fa fa-comment-o space_icon" aria-hidden="true"></i> {{question.comments.length}}</span>
+
+
+         <span class="question_box_footer_answers_correct" ng-repeat="comment in question.comments  | filter:{correct_answer:true} as result  " ng-show="$first">Rätt(a) svar<i class="fa fa-check space_icon correct_check" aria-hidden="true"></i> {{result.length}}
+
+         </span>
+
+
+    </div>
+  </div>
+
+
 </div>
